# CraftedHaven

./: .gitignore  manage.py  pyproject.toml
CraftedHaven/: asgi.py  settings.py  urls.py  wsgi.py
api/: permissions.py  serializers.py  tests.py  views.py
carts/: models.py  urls.py  views.py
carts/migrations/: 0001_initial.py
carts/templates/carts/includes/: included_cart.html
carts/templatetags/: carts_tags.py
goods/: admin.py  models.py  urls.py  utils.py  views.py
goods/fixtures/: categories.json  cats.json  prod.json  products.json
goods/migrations/: 0001_initial.py  0002_likedproduct.py  0002_products.py
goods/templates/goods/: catalog.html  product.html
goods/templatetags/: goods_tags.py
main/: urls.py  views.py
main/templates/main/: about.html  base.html  index.html
orders/: forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py
orders/templates/orders/: create_order.html
templates/: base.html
templates/includes/: cart_button.html  notifications.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_phone_number.py
users/templates/users/: login.html  profile.html  registration.html  users_cart.html
