[tool.poetry]
name = "craftedhaven"
version = "0.1.0"
description = ""
authors = ["RomanMainAcc <romanborisuk0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.8"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"
django-debug-toolbar = "^4.3.0"
ipython = "^8.23.0"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
